Bug #1080585 arm64: configs: modify sharkl5Pro config
[root cause  ] arrange configs
[changes     ] defconfig
[side effects] no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: ums512
[test case]: build & poweron test
[reviewers   ] Nianfu.bai Ruifeng.Zhang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Change-Id: I14c8954f60838d9ebcd676d06b45bbeadb33a92c
Signed-off-by: Cixi.Geng <gengcx@spreadst.com>

--- a/arch/arm64/configs/sprd_sharkl5Pro_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5Pro_defconfig
@@ -477,8 +477,6 @@ CONFIG_HAVE_MEMBLOCK=y
 CONFIG_NO_BOOTMEM=y
 # CONFIG_HAVE_BOOTMEM_INFO_NODE is not set
 CONFIG_SPLIT_PTLOCK_CPUS=4
-CONFIG_MEMORY_BALLOON=y
-CONFIG_BALLOON_COMPACTION=y
 CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
@@ -1177,8 +1175,7 @@ CONFIG_BLK_DEV_RAM_COUNT=16
 CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_CDROM_PKTCDVD is not set
 # CONFIG_ATA_OVER_ETH is not set
-CONFIG_VIRTIO_BLK=y
-# CONFIG_VIRTIO_BLK_SCSI is not set
+# CONFIG_VIRTIO_BLK is not set
 # CONFIG_BLK_DEV_RBD is not set
 # CONFIG_NVME_FC is not set
 # CONFIG_NVME_TARGET is not set
@@ -1293,7 +1290,7 @@ CONFIG_SPRD_AUDIO_SIPC=y
 # CONFIG_SPRD_AUDIO_SAUDIO is not set
 CONFIG_SPRD_AUDIO_MCDT=y
 # CONFIG_SPRD_HW_DEVICE_DVFS_AGCP is not set
-# CONFIG_SPRD_AUDIO_CPBOOT is not set
+CONFIG_SPRD_AUDIO_CPBOOT=y
 # CONFIG_SPRD_APDU is not set
 
 #
@@ -1801,7 +1798,6 @@ CONFIG_OF_GPIO=y
 CONFIG_GPIOLIB_IRQCHIP=y
 # CONFIG_DEBUG_GPIO is not set
 CONFIG_GPIO_SYSFS=y
-CONFIG_GPIO_GENERIC=y
 
 #
 # Memory mapped GPIO drivers
@@ -1811,15 +1807,15 @@ CONFIG_GPIO_GENERIC=y
 # CONFIG_GPIO_DWAPB is not set
 CONFIG_GPIO_EIC_SPRD=y
 # CONFIG_GPIO_FTGPIO010 is not set
-CONFIG_GPIO_GENERIC_PLATFORM=y
+# CONFIG_GPIO_GENERIC_PLATFORM is not set
 # CONFIG_GPIO_GRGPIO is not set
 # CONFIG_GPIO_MOCKUP is not set
-CONFIG_GPIO_PL061=y
+# CONFIG_GPIO_PL061 is not set
 CONFIG_GPIO_PMIC_EIC_SPRD=y
 CONFIG_GPIO_SPRD=y
 # CONFIG_GPIO_PLUS_SPRD is not set
 # CONFIG_GPIO_SYSCON is not set
-CONFIG_GPIO_XGENE=y
+# CONFIG_GPIO_XGENE is not set
 # CONFIG_GPIO_XILINX is not set
 
 #
@@ -1892,6 +1888,7 @@ CONFIG_CHARGER_MANAGER=y
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
 # CONFIG_CHARGER_RT9455 is not set
+CONFIG_CHARGER_SC2703=y
 # CONFIG_CHARGER_SC2731 is not set
 CONFIG_CHARGER_FAN54015=y
 CONFIG_FUEL_GAUGE_SC27XX=y
@@ -1922,9 +1919,9 @@ CONFIG_GENERIC_ADC_THERMAL=y
 CONFIG_SPRD_THERMAL=y
 # CONFIG_SPRD_DEDICATE_THERMAL is not set
 # CONFIG_SPRD_CPU_COOLING is not set
-# CONFIG_SPRD_CLUSTER0_THERMAL is not set
-# CONFIG_SPRD_CLUSTER1_THERMAL is not set
-# CONFIG_SPRD_SOC_THERMAL is not set
+CONFIG_SPRD_CLUSTER0_THERMAL=y
+CONFIG_SPRD_CLUSTER1_THERMAL=y
+CONFIG_SPRD_SOC_THERMAL=y
 # CONFIG_SC27XX_TSENSOR_THERMAL is not set
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_CORE=y
@@ -1987,7 +1984,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_DA9062 is not set
 # CONFIG_MFD_DA9063 is not set
 # CONFIG_MFD_DA9150 is not set
-# CONFIG_MFD_SC2703 is not set
+CONFIG_MFD_SC2703=y
 # CONFIG_MFD_DLN2 is not set
 # CONFIG_MFD_MC13XXX_SPI is not set
 # CONFIG_MFD_MC13XXX_I2C is not set
@@ -2062,7 +2059,7 @@ CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_WM8994 is not set
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
-CONFIG_REGULATOR_FIXED_VOLTAGE=y
+# CONFIG_REGULATOR_FIXED_VOLTAGE is not set
 # CONFIG_REGULATOR_VIRTUAL_CONSUMER is not set
 # CONFIG_REGULATOR_USERSPACE_CONSUMER is not set
 # CONFIG_REGULATOR_ACT8865 is not set
@@ -2071,7 +2068,7 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_DA9210 is not set
 # CONFIG_REGULATOR_DA9211 is not set
 # CONFIG_REGULATOR_SC2703 is not set
-CONFIG_REGULATOR_FAN53555=y
+# CONFIG_REGULATOR_FAN53555 is not set
 # CONFIG_REGULATOR_GPIO is not set
 # CONFIG_REGULATOR_ISL9305 is not set
 # CONFIG_REGULATOR_ISL6271A is not set
@@ -2276,6 +2273,7 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
 # CONFIG_BACKLIGHT_PWM is not set
+# CONFIG_BACKLIGHT_SC2703 is not set
 # CONFIG_BACKLIGHT_PM8941_WLED is not set
 # CONFIG_BACKLIGHT_ADP8860 is not set
 # CONFIG_BACKLIGHT_ADP8870 is not set
@@ -2954,7 +2952,7 @@ CONFIG_LEDS_SC27XX_BLTC=y
 # LED driver for blink(1) USB RGB LED is under Special HID drivers (HID_THINGM)
 #
 # CONFIG_LEDS_BLINKM is not set
-CONFIG_LEDS_SYSCON=y
+# CONFIG_LEDS_SYSCON is not set
 # CONFIG_LEDS_USER is not set
 
 #
@@ -2963,9 +2961,9 @@ CONFIG_LEDS_SYSCON=y
 CONFIG_LEDS_TRIGGERS=y
 # CONFIG_LEDS_TRIGGER_TIMER is not set
 # CONFIG_LEDS_TRIGGER_ONESHOT is not set
-CONFIG_LEDS_TRIGGER_HEARTBEAT=y
+# CONFIG_LEDS_TRIGGER_HEARTBEAT is not set
 # CONFIG_LEDS_TRIGGER_BACKLIGHT is not set
-CONFIG_LEDS_TRIGGER_CPU=y
+# CONFIG_LEDS_TRIGGER_CPU is not set
 # CONFIG_LEDS_TRIGGER_ACTIVITY is not set
 # CONFIG_LEDS_TRIGGER_GPIO is not set
 # CONFIG_LEDS_TRIGGER_DEFAULT_ON is not set
@@ -3128,7 +3126,7 @@ CONFIG_VIRTIO=y
 #
 # Virtio drivers
 #
-CONFIG_VIRTIO_BALLOON=y
+# CONFIG_VIRTIO_BALLOON is not set
 # CONFIG_VIRTIO_INPUT is not set
 CONFIG_VIRTIO_MMIO=y
 # CONFIG_VIRTIO_MMIO_CMDLINE_DEVICES is not set
@@ -3307,8 +3305,7 @@ CONFIG_COMMON_CLK=y
 #
 # Common Clock Framework
 #
-CONFIG_COMMON_CLK_VERSATILE=y
-CONFIG_CLK_SP810=y
+# CONFIG_COMMON_CLK_VERSATILE is not set
 # CONFIG_CLK_HSDK is not set
 # CONFIG_COMMON_CLK_SI5351 is not set
 # CONFIG_COMMON_CLK_SI514 is not set
@@ -3317,7 +3314,7 @@ CONFIG_CLK_SP810=y
 # CONFIG_COMMON_CLK_CDCE925 is not set
 # CONFIG_COMMON_CLK_CS2000_CP is not set
 # CONFIG_CLK_QORIQ is not set
-CONFIG_COMMON_CLK_XGENE=y
+# CONFIG_COMMON_CLK_XGENE is not set
 # CONFIG_COMMON_CLK_NXP is not set
 # CONFIG_COMMON_CLK_PWM is not set
 # CONFIG_COMMON_CLK_PXA is not set
@@ -3342,7 +3339,7 @@ CONFIG_TIMER_PROBE=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 CONFIG_ARM_ARCH_TIMER_OOL_WORKAROUND=y
-CONFIG_FSL_ERRATUM_A008585=y
+# CONFIG_FSL_ERRATUM_A008585 is not set
 # CONFIG_HISILICON_ERRATUM_161010101 is not set
 CONFIG_ARM64_ERRATUM_858921=y
 # CONFIG_ARM_TIMER_SP804 is not set
@@ -3426,7 +3423,7 @@ CONFIG_SPRD_DEBUG=y
 CONFIG_SPRD_DJTAG_CORE=y
 CONFIG_SPRD_DJTAG=y
 CONFIG_SPRD_BUSMONITOR=y
-# CONFIG_SPRD_APB_BUSMONITOR is not set
+CONFIG_SPRD_APB_BUSMONITOR=y
 # CONFIG_SPRD_EIRQSOFF is not set
 CONFIG_SPRD_IRQS_MONITOR=y
 # CONFIG_SPRD_LAST_REGS is not set
@@ -3436,8 +3433,8 @@ CONFIG_SPRD_SYSDUMP=y
 # CONFIG_SPRD_MINI_SYSDUMP is not set
 CONFIG_SPRD_LOOK_AT=y
 CONFIG_SPRD_CPU_USAGE=y
-# CONFIG_SPRD_PTM is not set
-# CONFIG_SPRD_DMC_DRV is not set
+CONFIG_SPRD_PTM=y
+CONFIG_SPRD_DMC_DRV=y
 # CONFIG_SUNXI_SRAM is not set
 # CONFIG_SOC_TI is not set
 CONFIG_PM_DEVFREQ=y
@@ -3455,7 +3452,8 @@ CONFIG_PM_DEVFREQ=y
 # DEVFREQ Drivers
 #
 # CONFIG_DEVFREQ_SPRD_AUTO_DFS is not set
-# CONFIG_SPRD_TOP_DVFS_DEVFREQ is not set
+CONFIG_SPRD_TOP_DVFS_DEVFREQ=y
+# CONFIG_SPRD_APSYS_DVFS_DEVFREQ is not set
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
 
@@ -3850,7 +3848,7 @@ CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_LIBNVDIMM is not set
 CONFIG_DAX=y
 CONFIG_NVMEM=y
-# CONFIG_SPRD_EFUSE is not set
+CONFIG_SPRD_EFUSE=y
 CONFIG_SPRD_CACHE_EFUSE=y
 CONFIG_SC27XX_EFUSE=y
 # CONFIG_STM is not set
@@ -4251,7 +4249,7 @@ CONFIG_FTRACE_MCOUNT_RECORD=y
 # CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
 # CONFIG_TRACE_EVAL_MAP_FILE is not set
-CONFIG_TRACING_EVENTS_GPIO=y
+# CONFIG_TRACING_EVENTS_GPIO is not set
 # CONFIG_DMA_API_DEBUG is not set
 
 #
