Bug #1079954 arm: dts: Add PMIC EIC device nodes for SC2721
[root cause  ] sharkle ugrade to k4.14
[changes     ] Add pmic eic device nodes for SC2721
[side effects] no
[self test   ]:yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: sharkle
[test case]: compile ok
[reviewers   ] bruce.chen
[change_type ] new feature
[tag_product ] common

Add PMIC EIC device nodes for SC2721

Change-Id: I3068d7a8cad8e7a0678bf9423f2131ebad285b12
Signed-off-by: Taiping Lai <taiping.lai@unisoc.com>

--- a/arch/arm/boot/dts/sc2721.dtsi
+++ b/arch/arm/boot/dts/sc2721.dtsi
@@ -17,6 +17,17 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 
+		pmic_eic: gpio-controller@280 {
+			compatible = "sprd,sc27xx-eic", "sprd,sc2721-eic";
+			reg = <0x280>;
+			interrupts = <4 IRQ_TYPE_LEVEL_HIGH>;
+			interrupt-parent = <&sc2721_pmic>;
+			gpio-controller;
+			#gpio-cells = <2>;
+			interrupt-controller;
+			#interrupt-cells = <2>;
+		};
+
 		efuse@300 {
 			compatible = "sprd,sc27xx-efuse", "sprd,sc2721-efuse";
 			reg = <0x300>;
