--- a/arch/arm/boot/dts/sp7731e-common.dtsi
+++ b/arch/arm/boot/dts/sp7731e-common.dtsi
@@ -57,6 +57,12 @@
 		};
 	};
 
+	display-subsystem {
+		compatible = "sprd,display-subsystem";
+		ports = <&dpu_port>;
+		/*gsp = <&gsp>;*/
+	};
+
 	ramoops {
 		compatible = "ramoops";
 		memory-region = <&pstore>;
