--- a/arch/arm/boot/dts/pike2.dtsi
+++ b/arch/arm/boot/dts/pike2.dtsi
@@ -7,6 +7,8 @@
  */
 
 #include <dt-bindings/interrupt-controller/arm-gic.h>
+#include <dt-bindings/soc/sprd,pike2-regs.h>
+#include <dt-bindings/soc/sprd,pike2-mask.h>
 
 / {
 	interrupt-parent = <&gic>;
