--- a/arch/arm/configs/sprd_sharkle_defconfig
+++ b/arch/arm/configs/sprd_sharkle_defconfig
@@ -1952,7 +1952,7 @@ CONFIG_GPIO_EIC_SPRD=y
 # CONFIG_GPIO_MOCKUP is not set
 # CONFIG_GPIO_MPC8XXX is not set
 # CONFIG_GPIO_PL061 is not set
-# CONFIG_GPIO_PMIC_EIC_SPRD is not set
+CONFIG_GPIO_PMIC_EIC_SPRD=y
 CONFIG_GPIO_SPRD=y
 # CONFIG_GPIO_PLUS_SPRD is not set
 # CONFIG_GPIO_SYSCON is not set
