Bug #1092074 arm: sprd: configs: disable SND_SOC_SPRD to fix the aiaiai error
[root cause  ] aiaiai error
[changes     ] disable SND_SOC_SPRD to fix the aiaiai error
[side effects] no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: no
[board]: s9863a1h10_go_32b
[test case]: bootimage compile passed
[reviewers   ] nianfu.bai
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Change-Id: Ia5017e1bb88a680447e1d84e9db286cece3f93df
Signed-off-by: Ruifeng Zhang <zhangrf@spreadst.com>

--- a/arch/arm/configs/sprd_sharkl3_defconfig
+++ b/arch/arm/configs/sprd_sharkl3_defconfig
@@ -1368,9 +1368,16 @@ CONFIG_SPRD_JPG_CALL_VSP_PW_DOMAIN=y
 #
 # Spreadtrum WCN Device Drivers
 #
-# CONFIG_SC23XX is not set
+CONFIG_SC23XX=y
+CONFIG_SC2342_INTEG=y
+# CONFIG_SC2355 is not set
+# CONFIG_UMW2652 is not set
+# CONFIG_SDIOHAL is not set
+CONFIG_WCN_SIPC=y
+# CONFIG_WCN_PCIE is not set
 # CONFIG_WCN_BOOT is not set
 # CONFIG_WCN_UTILS is not set
+CONFIG_WCN_PLATFORM=y
 
 #
 # Spreadtrum Audio Assistant Modules
@@ -2522,30 +2529,7 @@ CONFIG_SND_SOC=y
 #
 # CONFIG_SND_SOC_XTFPGA_I2S is not set
 # CONFIG_ZX_TDM is not set
-CONFIG_SND_SOC_SPRD=y
-# CONFIG_SND_SOC_SPRD_I2S is not set
-# CONFIG_SND_SOC_SPRD_VBC_V4_SC2730 is not set
-# CONFIG_SND_SOC_SPRD_I2S_DUMMY is not set
-CONFIG_SND_SOC_SPRD_R1P0V3_SC2721=y
-CONFIG_SND_SOC_SPRD_SHARKL3=y
-
-#
-# SPRD VBC Dai Version
-#
-CONFIG_SND_SOC_SPRD_VBC_R1P0V3=y
-CONFIG_SND_SOC_SPRD_VAUDIO=y
-
-#
-# SPRD Platform
-#
-CONFIG_SND_SOC_SPRD_AUDIO_TWO_STAGE_DMAENGINE_SURPPORT=y
-
-#
-# SPRD Codec
-#
-CONFIG_SND_SOC_SPRD_CODEC_SC2721=y
-# CONFIG_SND_SOC_SPRD_CODEC_EAR_WITH_IN_SPK is not set
-# CONFIG_SND_SOC_SPRD_CODEC_NO_HP_POP is not set
+# CONFIG_SND_SOC_SPRD is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 
 #
@@ -3547,7 +3531,7 @@ CONFIG_SPRD_SIPC_ZERO_COPY_SIPX=y
 CONFIG_SPRD_SIPC_MEM_CACHE_EN=y
 CONFIG_SPRD_SIPC_SETH=y
 CONFIG_SPRD_SIPC_SETH_RAWIP=y
-# CONFIG_SPRD_SIPC_SWCNBLK is not set
+CONFIG_SPRD_SIPC_SWCNBLK=y
 CONFIG_SPRD_CPROC=y
 
 #
