--- a/arch/arm/configs/sprd_sharkl3_defconfig
+++ b/arch/arm/configs/sprd_sharkl3_defconfig
@@ -3541,6 +3541,7 @@ CONFIG_SPRD_IQ=y
 # CONFIG_SPRD_HW_DEVICE_DVFS_CP is not set
 # CONFIG_SPRD_MCD is not set
 # CONFIG_SPRD_MODEM_LOADER is not set
+# CONFIG_SPRD_CRYPTO_SW is not set
 CONFIG_DISP_PM_DOMAIN_SHARKL3=y
 # CONFIG_SPRD_MM_PW_DOMAIN_R6P0 is not set
 CONFIG_SPRD_CAM_PW_DOMAIN_R5P0=y
