Bug #1051149 arm64: dts: Add usb dts config for sharkl5Pro
[root cause  ] add usb dts for sharkl5Pro
[changes     ] dts
[side effects]no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:kernel4.14
[is there dependence]:no
[confirm dependent commit]:no
[board]:ums512
[test case]:usb function
[reviewers   ] jiayong.yang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

This submit for usb dts config sharkl5Pro.

Change-Id: Ia259b51b74eb6aac04f3e3ab19049e1c96f50633
Signed-off-by: Chunhou Wang <chunhou.wang@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
@@ -1077,6 +1077,7 @@
 				usb-phy = <&hsphy>;
 				phy-names = "usb";
 				dr-mode = "peripheral";
+				multipoint = "true";
 				wakeup-source;
 			};
 		};
