Bug #1064447 arm64: dts: memory layout for vdsp
[root cause  ] memory layout for ums512's vdsp and faceid
[changes     ] dts
[side effects] no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: ums512
[test case]: build is ok
[reviewers   ] Nianfu.Bai Ruifeng.Zhang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

vdsp and faceid memory layout for sharkl5pro when bringup

Change-Id: I6f4cfafd1e8e554ec6e7e58af7159d01ff111424
Signed-off-by: Yuming Han <yuming.han@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/ums512-1h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10-overlay.dts
@@ -51,11 +51,11 @@
 &reserved_memory {
 
 	fd_reserved: faceid-mem {
-		reg = <0x0 0xf13ae000 0x0 0x00f00000>;
+		reg = <0x0 0xf04ae000 0x0 0x00f00000>;
 	};
 
 	vdsp_reserved: vdsp-mem {
-		reg = <0x0 0xf22ae000 0x0 0x01e00000>;
+		reg = <0x0 0xf13ae000 0x0 0x02d00000>;
 	};
 
 	vsp_reserved: vsp-mem {
