Bug #1082558 misc: sprd_camera: add camera dts for ums512
[root cause  ] no dts code of ums512
[changes     ] kernel4.14/driver/misc
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:ums518
[test case]:compile
[reviewers   ] qin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add dts code for ums512.

Change-Id: I80ba88dc7c7b91349b4e450ddb1eaad880197708
Signed-off-by: Xiaobo Liu <xiaobo.liu@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/ums512-1h10.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10.dts
@@ -8,7 +8,7 @@
 /dts-v1/;
 
 #include <dt-bindings/gpio/gpio.h>
-
+#include "ums512-mm-dvfs.dtsi"
 #include "ums512.dtsi"
 #include "sc2730.dtsi"
 #include "ums512-mach.dtsi"
@@ -80,6 +80,7 @@
 			reg = <1>;
 			label = "carveout_mm";
 			type = <2>;
+			memory-region = <&mm_reserved>;
 		};
 
 		heap@2 {
@@ -296,6 +297,9 @@
 };
 
 &reserved_memory {
+	mm_reserved: mm-mem {
+		reg = <0x0 0xa0000000 0x0 0x1c000000>;
+	};
 
 	fb_reserved: framebuffer-mem {
 		reg = <0x0 0xfd708000 0x0 0x01e5a000>;
@@ -354,6 +358,97 @@
 
 &uart1 {
 	status = "okay";
+};
+
+&i2c0 {
+	status = "okay";
+	clock-frequency = <400000>;
+
+	sensor_main: sensor-main@20 {
+		compatible = "sprd,sensor-main";
+		reg = <0x20>;
+		clock-names = "clk_src","sensor_eb",
+			"clk_96m","clk_76m8",
+			"clk_48m","clk_26m";
+		clocks = <&mm_clk CLK_SENSOR0>,<&mm_gate CLK_MM_SENSOR0_EB>,
+				<&pll2 CLK_TWPLL_96M>,<&pll2 CLK_TWPLL_76M8>,
+				<&pll2 CLK_TWPLL_48M>,<&ext_26m>;
+		vddio-supply = <&vddcamio>;
+		vddcama-supply = <&vddcama0>;
+		vddcamd-supply = <&vddcamd0>;
+		vddcammot-supply = <&vddcammot>;
+		reset-gpios = <&ap_gpio 44 0>;
+		power-down-gpios = <&ap_gpio 46 0>;
+		sprd,phyid = <0>;
+		csi = <&csi0>;
+	};
+
+	sensor_sub: sensor-sub@5a {
+		compatible = "sprd,sensor-sub";
+		reg = <0x5a>;
+		clock-names = "clk_src","sensor_eb",
+			"clk_96m","clk_76m8",
+			"clk_48m","clk_26m";
+		clocks = <&mm_clk CLK_SENSOR0>,<&mm_gate CLK_MM_SENSOR0_EB>,
+				<&pll2 CLK_TWPLL_96M>,<&pll2 CLK_TWPLL_76M8>,
+				<&pll2 CLK_TWPLL_48M>,<&ext_26m>;
+		vddio-supply = <&vddcamio>;
+		vddcama-supply = <&vddcama0>;
+		vddcamd-supply = <&vddcamd0>;
+		vddcammot-supply = <&vddcammot>;
+		avdd-gpio = <&ap_gpio 33 0>;
+		reset-gpios = <&ap_gpio 41 0>;
+		power-down-gpios = <&ap_gpio 40 0>;
+		mipi-switch-en-gpios = <&ap_gpio 55 0>;
+		mipi-switch-mode-gpios = <&ap_gpio 8 0>;
+		sprd,phyid = <1>;
+		csi = <&csi1>;
+	};
+};
+
+&i2c1 {
+	status = "okay";
+	clock-frequency = <400000>;
+
+	sensor_main2: sensor-main2@20 {
+		compatible = "sprd,sensor-main2";
+		reg = <0x6c>;
+		clock-names = "clk_src","sensor_eb",
+			"clk_96m","clk_76m8",
+			"clk_48m","clk_26m";
+		clocks = <&mm_clk CLK_SENSOR1>,<&mm_gate CLK_MM_SENSOR1_EB>,
+				<&pll2 CLK_TWPLL_96M>,<&pll2 CLK_TWPLL_76M8>,
+				<&pll2 CLK_TWPLL_48M>,<&ext_26m>;
+		vddio-supply = <&vddcamio>;
+		vddcama-supply = <&vddcama1>;
+		vddcamd-supply = <&vddcamd1>;
+		vddcammot-supply = <&vddcammot>;
+		reset-gpios = <&ap_gpio 45 0>;
+		power-down-gpios = <&ap_gpio 47 0>;
+		mipi-switch-en-gpios = <&ap_gpio 55 0>;
+		mipi-switch-mode-gpios = <&ap_gpio 8 0>;
+		sprd,phyid = <1>;
+		csi = <&csi1>;
+	};
+
+	sensor_main3: sensor-mian3@6c {
+		compatible = "sprd,sensor-sub";
+		reg = <0x20>;
+		clock-names = "clk_src","sensor_eb",
+			"clk_96m","clk_76m8",
+			"clk_48m","clk_26m";
+		clocks = <&mm_clk CLK_SENSOR1>,<&mm_gate CLK_MM_SENSOR1_EB>,
+				<&pll2 CLK_TWPLL_96M>,<&pll2 CLK_TWPLL_76M8>,
+				<&pll2 CLK_TWPLL_48M>,<&ext_26m>;
+		vddio-supply = <&vddcamio>;
+		vddcama-supply = <&vddcama1>;
+		vddcamd-supply = <&vddcamd1>;
+		vddcammot-supply = <&vddcammot>;
+		reset-gpios = <&ap_gpio 41 0>;
+		power-down-gpios = <&ap_gpio 40 0>;
+		sprd,phyid = <2>;
+		csi = <&csi2>;
+	};
 };
 
 &i2c4 {
@@ -455,5 +550,37 @@
 };
 
 &pmic_typec {
+	status = "okay";
+};
+
+&isp_dvfs {
+	status = "okay";
+};
+
+&cpp_dvfs {
+	status = "okay";
+};
+
+&jpg_dvfs {
+	status = "okay";
+};
+
+&fd_dvfs {
+	status = "okay";
+};
+
+&mtx_dvfs {
+	status = "okay";
+};
+
+&dcam_if_dvfs {
+	status = "okay";
+};
+
+&dcam_axi_dvfs {
+	status = "okay";
+};
+
+&mmsys_dvfs {
 	status = "okay";
 };
