--- a/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
@@ -162,6 +162,268 @@
 			reg = <0 0x62200000 0 0x100000>;
 		};
 
+		mm {
+			compatible = "simple-bus";
+			#address-cells = <2>;
+			#size-cells = <2>;
+			ranges;
+
+			mm_domain: mm_domain {
+				compatible = "sprd,mm-domain";
+				syscon-names = "force_shutdown",
+					"shutdown_en",
+					"power_state",
+					"qos_ar",
+					"qos_aw";
+				syscons =
+				<&pmu_apb_regs
+				REG_PMU_APB_RF_PD_MM_TOP_CFG
+				MASK_PMU_APB_RF_PD_MM_TOP_FORCE_SHUTDOWN>,
+				<&pmu_apb_regs
+				REG_PMU_APB_RF_PD_MM_TOP_CFG
+				MASK_PMU_APB_RF_PD_MM_TOP_AUTO_SHUTDOWN_EN>,
+				<&pmu_apb_regs
+				REG_PMU_APB_RF_PWR_STATUS3_DBG
+				MASK_PMU_APB_RF_PD_MM_TOP_STATE>,
+				<&mm_ahb_regs
+				REG_MM_AHB_RF_MM_QOS
+				MASK_MM_AHB_RF_AR_QOS_THRESHOLD_MM>,
+				<&mm_ahb_regs
+				REG_MM_AHB_RF_MM_QOS
+				MASK_MM_AHB_RF_AW_QOS_THRESHOLD_MM>;
+				clock-names = "clk_mm_eb",
+					"clk_mm_ahb_eb",
+					"clk_mm_ahb",
+					"clk_mm_ahb_parent",
+					"clk_mm_mtx",
+					"clk_mm_mtx_parent";
+				clocks = <&aonapb_gate CLK_MM_EB>,
+					<&mm_gate CLK_MM_CKG_EB>,
+					<&mm_clk CLK_MM_AHB>,
+					<&pll2 CLK_TWPLL_153M6>,
+					<&mm_clk CLK_MM_MTX>,
+					<&pll2 CLK_TWPLL_512M>;
+			};
+
+			mipi_csi_phy0: mipi-csi-phy0 {
+				compatible = "sprd,mipi-csi-phy";
+				sprd,phyid = <0>;
+				sprd,phyname = "4lane";
+				status = "disabled";
+			};
+
+			mipi_csi_phy1: mipi-csi-phy1 {
+				compatible = "sprd,mipi-csi-phy";
+				sprd,phyid = <1>;
+				sprd,phyname = "2p2";
+				status = "disabled";
+			};
+
+			mipi_csi_phy1_m: mipi-csi-phy1-m {
+				compatible = "sprd,mipi-csi-phy";
+				sprd,phyid = <3>;
+				sprd,phyname = "2p2_m";
+				status = "disabled";
+			};
+
+			mipi_csi_phy1_s: mipi-csi-phy1-s {
+				compatible = "sprd,mipi-csi-phy";
+				sprd,phyid = <4>;
+				sprd,phyname = "2p2_s";
+				status = "disabled";
+			};
+
+			mipi_csi_phy2: mipi-csi-phy2 {
+				compatible = "sprd,mipi-csi-phy";
+				sprd,phyid = <2>;
+				sprd,phyname = "2lane";
+				status = "disabled";
+			};
+
+			isp: isp@62000000 {
+				compatible = "sprd,isp";
+				reg = <0 0x62000000 0 0x100000>;
+				interrupts = <GIC_SPI 43 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 44 IRQ_TYPE_LEVEL_HIGH>;
+				interrupts_name = "ispch0", "ispch1";
+				clock-names = "isp_eb",
+					"isp_axi_eb", /* no need read, TBC */
+					"isp_clk",
+					"isp_clk_256m",
+					"isp_clk_307m2",
+					"isp_clk_384m",
+					"isp_clk_468m",
+					"isp_clk_512m",
+					"isp_clk_parent";
+				clocks = <&mm_gate CLK_MM_ISP_EB>,
+					<&mm_gate CLK_ISP_AHB_EB>,
+					<&mm_clk CLK_ISP>,
+					<&pll2 CLK_TWPLL_256M>,
+					<&pll2 CLK_TWPLL_307M2>,
+					<&pll2 CLK_TWPLL_384M>,
+					<&pll2 CLK_ISPPLL_468M>,
+					<&pll2 CLK_TWPLL_512M>,
+					<&pll2 CLK_TWPLL_512M>;
+				syscons = <&mm_ahb_regs REG_MM_AHB_RF_AHB_RST MASK_MM_AHB_RF_ISP_SOFT_RST>,
+					<&mm_ahb_regs REG_MM_AHB_RF_AHB_RST MASK_MM_AHB_RF_ISP_AHB_SOFT_RST>,
+					<&mm_ahb_regs REG_MM_AHB_RF_AHB_RST MASK_MM_AHB_RF_ISP_VAU_SOFT_RST>,
+					<&mm_ahb_regs REG_MM_AHB_RF_AHB_EB MASK_MM_AHB_RF_ISP_EB>;
+				syscon-names = "isp_reset",
+					"isp_ahb_reset",
+					"isp_vau_reset",
+					"isp_enable";
+				sprd,isp-count = <1>;
+				/*iommus = <&iommu_isp>;*/
+				status = "disabled";
+			};
+
+			csi0: csi00@62300000 {
+				compatible = "sprd,csi-controller";
+				reg = <0 0x62300000 0 0x1000>;
+				interrupts = <GIC_SPI 45 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 46 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 47 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 48 IRQ_TYPE_LEVEL_HIGH>;
+				clock-names = "clk_mipi_csi_gate_eb",
+					"clk_csi_eb",
+					"mipi_csi_src_eb";
+				clocks = <&mm_gate CLK_MM_MIPI_CSI0_EB>,
+					<&mm_gate CLK_MM_CSI0_EB>,
+					<&mm_clk CLK_MIPI_CSI0>;
+				sprd,aon-apb-syscon = <&aon_apb_regs>;
+				sprd,cam-ahb-syscon = <&mm_ahb_regs>;
+				sprd,anlg_phy_g10_controller = <&anlg_phy_g10_regs>;
+				sprd,csi-id = <0>;
+				sprd,dcam-id = <0>;
+				sprd,ip-version = <0x200>;
+				status = "disable";
+			};
+
+			csi1: csi01@62400000 {
+				compatible = "sprd,csi-controller";
+				reg = <0 0x62400000 0 0x1000>;
+				interrupts = <GIC_SPI 49 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 50 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 51 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 52 IRQ_TYPE_LEVEL_HIGH>;
+				clock-names = "clk_mipi_csi_gate_eb",
+					"clk_csi_eb",
+					"mipi_csi_src_eb";
+				clocks = <&mm_gate CLK_MM_MIPI_CSI1_EB>,
+					<&mm_gate CLK_MM_CSI1_EB>,
+					<&mm_clk CLK_MIPI_CSI1>;
+				sprd,aon-apb-syscon = <&aon_apb_regs>;
+				sprd,cam-ahb-syscon = <&mm_ahb_regs>;
+				sprd,anlg_phy_g10_controller = <&anlg_phy_g10_regs>;
+				sprd,csi-id = <1>;
+				sprd,dcam-id = <1>;
+				sprd,ip-version = <0x200>;
+				status = "disable";
+			};
+
+			csi2: csi02@62500000 {
+				compatible = "sprd,csi-controller";
+				reg = <0 0x62500000 0 0x1000>;
+				interrupts = <GIC_SPI 53 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 54 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 55 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 56 IRQ_TYPE_LEVEL_HIGH>;
+				clock-names = "clk_mipi_csi_gate_eb",
+					"clk_csi_eb",
+					"mipi_csi_src_eb";
+				clocks = <&mm_gate CLK_MM_MIPI_CSI2_EB>,
+					<&mm_gate CLK_MM_CSI2_EB>,
+					<&mm_clk CLK_MIPI_CSI2>;
+				sprd,aon-apb-syscon = <&aon_apb_regs>;
+				sprd,cam-ahb-syscon = <&mm_ahb_regs>;
+				sprd,anlg_phy_g10_controller = <&anlg_phy_g10_regs>;
+				sprd,csi-id = <2>;
+				sprd,dcam-id = <2>;
+				sprd,ip-version = <0x200>;
+				status = "disable";
+			};
+
+			cpp: cpp@62800000 {
+				compatible = "sprd,cpp";
+				reg = <0 0x62800000 0 0x1000>;
+				interrupts = <GIC_SPI 41 IRQ_TYPE_LEVEL_HIGH>;
+				clock-names = "cpp_eb",
+					"cpp_axi_eb", /* no need read, TBC */
+					"cpp_clk",
+					"cpp_clk_parent";
+				clocks = <&mm_gate CLK_MM_CPP_EB>,
+					<&mm_gate CLK_MM_ISP_EB>,
+					<&mm_clk CLK_CPP>,
+					<&pll2 CLK_TWPLL_384M>;
+				sprd,cam-ahb-syscon = <&mm_ahb_regs>;
+				/*iommus = <&iommu_cpp>;*/
+				status = "disabled";
+			};
+
+			dcam: dcam@62900000 {
+				compatible = "sprd,dcam";
+				reg = <0 0x62900000 0 0x1000>,
+					<0 0x62901000 0 0x1000>,
+					<0 0x62902000 0 0x1000>,
+					<0 0x62903000 0 0x1000>;
+				reg-names = "dcam0_reg",
+						"dcam1_reg",
+						"dcam2_reg",
+						"axi_ctrl_reg";
+				interrupts = <GIC_SPI 57 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 58 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 59 IRQ_TYPE_LEVEL_HIGH>;
+				interrupt-names = "dcam0",
+							"dcam1",
+							"dcam2";
+				clock-names = "dcam_eb",
+					"dcam_clk",
+					"dcam_clk_192m",
+					"dcam_clk_256m",
+					"dcam_clk_307m2",
+					"dcam_clk_384m",
+					"dcam_clk_468m",
+					"dcam_clk_parent",
+					"dcam_axi_eb",
+					"dcam_axi_clk",
+					"dcam_axi_clk_256m",
+					"dcam_axi_clk_307m2",
+					"dcam_axi_clk_384m",
+					"dcam_axi_clk_468m",
+					"dcam_axi_clk_parent";
+				clocks = <&mm_gate CLK_MM_DCAM_EB>,
+					<&mm_clk CLK_DCAM_IF>,
+					<&pll2 CLK_TWPLL_192M>,
+					<&pll2 CLK_TWPLL_256M>,
+					<&pll2 CLK_TWPLL_307M2>,
+					<&pll2 CLK_TWPLL_384M>,
+					<&pll2 CLK_ISPPLL_468M>,
+					<&pll2 CLK_ISPPLL_468M>,
+					<&mm_gate CLK_DCAM_AXI_EB>,
+					<&mm_clk CLK_DCAM_AXI>,
+					<&pll2 CLK_TWPLL_256M>,
+					<&pll2 CLK_TWPLL_307M2>,
+					<&pll2 CLK_TWPLL_384M>,
+					<&pll2 CLK_ISPPLL_468M>,
+					<&pll2 CLK_ISPPLL_468M>;
+				sprd,cam-ahb-syscon = <&mm_ahb_regs>;
+				sprd,isp = <&isp>;
+				sprd,dcam-count = <3>;
+				/*iommus = <&iommu_dcam>;*/
+				status = "okay";
+			};
+
+			fd: fd@62a00000 {
+				compatible = "sprd,fd";
+				reg = <0 0x62a00000 0 0x100000>;
+				interrupts = <GIC_SPI 40 IRQ_TYPE_LEVEL_HIGH>;
+				interrupts_name = "fdraw";
+				sprd,cam-ahb-syscon = <&mm_ahb_regs>;
+				/*iommus = <&iommu_fd>;*/
+				status = "disabled";
+			};
+		};
+
 		ap_apb_regs: syscon@71000000 {
 			compatible = "syscon";
 			#syscon-cells = <2>;
